# opensource

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  jest.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.js
.github/: dependabot.yml
circuits/: CEREMONY.md  README.md  ageProof.circom  incomeProof.circom  membershipProof.circom  package-lock.json  package.json  setup.js  test.js
cli/: otrust.js
docs/: sdk-design.md
examples/: README.md  node-hash-and-verify.mjs
scripts/: build-extension.js  quickstart.ps1  quickstart.sh  sync-opensource.mjs  validate-openapi.js
sdk-js/: README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk-python/: README.md  SECURITY.md  pyproject.toml
sdk-python/src/otrust/: __init__.py  auth.py  client.py  crypto.py  proof.py  result.py  sign.py  timestamp.py
sdk-python/tests/: __init__.py  test_auth.py  test_client.py  test_proof.py  test_sign.py  test_timestamp.py
sdk-react/: package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  tsup.config.ts  vitest.config.ts
src/: canonical-url.js  config.js  crypto.js  db.js  email.js  emailTemplate.js  opentimestamps.js  pow.js  server.js  sign.js  webhooks.js  zkproof.js  zkproofs.js
test/: api.test.js  canonical-url.test.js  crypto.test.js  email.test.js  pow.test.js  setup.js  validation.test.js
web/: _redirects  about.html  api-docs.html  auth-login.html  bookmarklet.html  camera-test.html  ceremony.html  changelog.html  commitment.html  developers.html  docs.html  embed.html  generate-icons.js  health-check.html  index.html  install.html  krisledel.html  manifest.json  merkle.html  notes-why-otrust.html  openapi.json  otrust-polish.css  otrust-polish.js  otrust-redesign.css  partner-builder.html  partners-hemsted.css  partners-hemsted.html  partners-preview.html  privacy-policy.html  (+18 more)
(+114 files in other folders)
