[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otrust"
version = "1.0.0"
description = "Official Python SDK for OTRUST - Zero-knowledge timestamps, signing, proofs, and authentication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Kris Ledel", email = "kris@otrust.eu" }]
keywords = [
    "otrust",
    "timestamp",
    "blockchain",
    "bitcoin",
    "opentimestamps",
    "signing",
    "identity",
    "authentication",
    "zero-knowledge",
    "proof"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://otrust.eu"
Documentation = "https://otrust.eu/docs/python"
Repository = "https://github.com/otrust-eu/opensource"
Issues = "https://github.com/otrust-eu/opensource/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/otrust"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
